--- a/src/index.html
+++ b/src/index.html
@@ -26,27 +26,17 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="css/style.min.css" />
-    <title>Start</title>
+    <title>Drag N Drop</title>
   </head>
 
   <body>
-    <div class="wrapper">
-      <header class="header">It's OK</header>
-      <!-- <picture class="picture object-fit-cover">
-    <source srcset="img/small2.webp, img/small2@2x.webp 2x" type="image/webp">
-    <img src="img/small2.png" srcset="img/small2.png, img/small2@2x.png 2x" alt="СЛЕСАРНЫЕ РАБОТЫ">
-  </picture> -->
-      <!-- <picture class="picture object-fit-cover">
-    <source media="(min-width: 577px)" srcset="img/promo-bg.webp, img/promo-bg@2x.webp 2x" type="image/webp">
-    <source media="(max-width: 576px)" srcset="img/promo-bg-576.webp, img/promo-bg-576@2x.webp 2x" type="image/webp">
-    <img src="img/promo-bg.png" srcset="img/promo-bg.png, img/promo-bg@2x.png 2x" alt="CARON MOTORS">
-  </picture> -->
-      <main>
-        <section class="promo"></section>
-      </main>
-
-      <footer class="footer"></footer>
+    <div class="empty">
+      <div class="fill" draggable="true"></div>
     </div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
 
     <script src="js/main.min.js"></script>
   </body>
